--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq xvfb libx11-dev libfreetype6-dev libxft-dev libpng-dev libz-dev libjpeg-dev $([ "$WINDOW_MANAGER" = "kwin" ] && echo -n "kde-window-manager" || echo -n $WINDOW_MANAGER)
+ - sudo apt-get install -qq xvfb libx11-dev libfreetype6-dev libxft-dev libpng-dev libz-dev libjpeg-dev $([ "$WINDOW_MANAGER" = "kwin" ] && echo -n "kde-window-manager" || echo -n $WINDOW_MANAGER) $([ "$USE_IMAGER" = "1" ] && echo -n "libimager-perl" || echo -n "")
  - '[ "$USE_SYSTEM_PERL" = "1" ] && perlbrew off || true'
  - '[ "$USE_SYSTEM_PERL" = "1" ] && sudo apt-get install -qq perl-tk || true'
  - Xvfb :123 &
@@ -26,6 +26,8 @@ matrix:
     env: USE_SYSTEM_PERL=1 WINDOW_MANAGER=metacity
   - perl: "5.14"
     env: USE_SYSTEM_PERL=1 WINDOW_MANAGER=xfwm4
+  - perl: "5.14"
+    env: USE_SYSTEM_PERL=1 USE_IMAGER=1 WINDOW_MANAGER=xfwm4
   - perl: "5.14"
     env: USE_SYSTEM_PERL=1 WINDOW_MANAGER=fluxbox
   - perl: "5.14"
