--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,3 @@
-before_install:
- - sudo apt-get update -qq
- - sudo apt-get install -qq xvfb libx11-dev libfreetype6-dev libxft-dev libpng-dev libz-dev libjpeg-dev $([ "$WINDOW_MANAGER" = "kwin" ] && echo -n "kde-window-manager" || echo -n $WINDOW_MANAGER) $([ "$USE_IMAGER" = "1" ] && echo -n "libimager-perl" || echo -n "")
- - '[ "$USE_SYSTEM_PERL" = "1" ] && perlbrew off || true'
- - '[ "$USE_SYSTEM_PERL" = "1" ] && sudo apt-get install -qq perl-tk || true'
- - Xvfb :123 &
- - export DISPLAY=:123
- # Wait until X server is available
- - perl -MIO::Socket::INET -e 'for (1..10) { IO::Socket::INET->new(PeerAddr => "localhost:6123") and exit; sleep 1 }'
- - $WINDOW_MANAGER &
- # Wait until window manager is running
- - sleep 2
-install:
- # For system perl all dependencies (Tk) are already installed
- # Skipping this step saves some seconds, as the EUMM upgrade
- # is not done.
- - '[ "$USE_SYSTEM_PERL" = "1" ] && true || cpanm --quiet --installdeps --notest .'
 language: perl
 matrix:
  include:
@@ -38,3 +21,25 @@ matrix:
     env: WINDOW_MANAGER=fvwm
   - perl: "5.8"
     env: WINDOW_MANAGER=fvwm
+
+before_install:
+ - sudo apt-get update -qq
+ - sudo apt-get install -qq xvfb libx11-dev libfreetype6-dev libxft-dev libpng-dev libz-dev libjpeg-dev $([ "$WINDOW_MANAGER" = "kwin" ] && echo -n "kde-window-manager" || echo -n $WINDOW_MANAGER) $([ "$USE_IMAGER" = "1" ] && echo -n "libimager-perl" || echo -n "")
+ - '[ "$USE_SYSTEM_PERL" = "1" ] && perlbrew off || true'
+ - '[ "$USE_SYSTEM_PERL" = "1" ] && sudo apt-get install -qq perl-tk || true'
+ - Xvfb :123 &
+ - export DISPLAY=:123
+ # Wait until X server is available
+ - perl -MIO::Socket::INET -e 'for (1..10) { IO::Socket::INET->new(PeerAddr => "localhost:6123") and exit; sleep 1 }'
+ - $WINDOW_MANAGER &
+ # Wait until window manager is running
+ - sleep 2
+install:
+ # For system perl all dependencies (Tk) are already installed
+ # Skipping this step saves some seconds, as the EUMM upgrade
+ # is not done.
+ - '[ "$USE_SYSTEM_PERL" = "1" ] && true || cpanm --quiet --installdeps --notest .'
+
+branches:
+ except:
+  - /appveyor/
