--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,47 @@
 language: perl
+arch:
+ - arm64
 matrix:
  include:
-  - perl: "5.14"
+  - dist: xenial
+    perl: 5.24
     env: USE_SYSTEM_PERL=1 WINDOW_MANAGER=twm
-  - perl: "5.14"
+    language: minimal
+  - dist: bionic
+    perl: 5.26
     env: USE_SYSTEM_PERL=1 WINDOW_MANAGER=fvwm
-  - perl: "5.14"
+    language: minimal
+  - dist: focal
+    perl: 5.32
     env: USE_SYSTEM_PERL=1 WINDOW_MANAGER=metacity
-  - perl: "5.14"
+    language: minimal
+  - dist: xenial
+    perl: 5.24
     env: USE_SYSTEM_PERL=1 WINDOW_MANAGER=xfwm4
-  - perl: "5.14"
+    language: minimal
+  - dist: bionic
+    perl: 5.26
     env: USE_SYSTEM_PERL=1 USE_IMAGER=1 WINDOW_MANAGER=xfwm4
-  - perl: "5.14"
+    language: minimal
+  - dist: focal
+    perl: 5.32
     env: USE_SYSTEM_PERL=1 WINDOW_MANAGER=fluxbox
-  - perl: "5.14"
+    language: minimal
+  - dist: xenial
+    perl: 5.24
     env: USE_SYSTEM_PERL=1 WINDOW_MANAGER=sawfish
-  - perl: "5.14"
+    language: minimal
+  - dist: bionic
+    perl: 5.26
     env: USE_SYSTEM_PERL=1 WINDOW_MANAGER=kwin
-  - perl: "5.20"
-    env: WINDOW_MANAGER=fvwm
-  - perl: "5.8"
+    language: minimal
+  - dist: focal
+    perl: 5.32
     env: WINDOW_MANAGER=fvwm
 
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq xvfb libx11-dev libfreetype6-dev libxft-dev libpng-dev libz-dev libjpeg-dev $([ "$WINDOW_MANAGER" = "kwin" ] && echo -n "kde-window-manager" || echo -n $WINDOW_MANAGER) $([ "$USE_IMAGER" = "1" ] && echo -n "libimager-perl" || echo -n "")
- - '[ "$USE_SYSTEM_PERL" = "1" ] && perlbrew off || true'
  - '[ "$USE_SYSTEM_PERL" = "1" ] && sudo apt-get install -qq perl-tk || true'
  - Xvfb :123 &
  - export DISPLAY=:123
@@ -43,3 +59,6 @@ install:
 branches:
  except:
   - /appveyor/
+  - /github-actions/
+  - /gitlab/
+  - /doozer/
